[gd_scene load_steps=7 format=3 uid="uid://d1k5jp5vibp8l"]

[ext_resource type="PackedScene" uid="uid://qjom2h210hyg" path="res://Assets/Art/3D Assets/FoodStandIn.gltf" id="1_hyvms"]
[ext_resource type="Script" uid="uid://dga0qyynny2cb" path="res://src/Scripts/health_drop.gd" id="1_juujy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_juujy"]
size = Vector3(1.4976807, 1, 1.3251953)

[sub_resource type="Animation" id="Animation_juujy"]
resource_name = "bob"
length = 2.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Soup:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.51148325, 1.0010458, 1.5125291, 2.0020916),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.11823499, -0.15495586, 0.056726933), Vector3(0.118, 0.1, 0.057), Vector3(0.11823499, -0.15495586, 0.056726933), Vector3(0.118, 0.1, 0.057), Vector3(0.11823499, -0.15495586, 0.056726933)]
}

[sub_resource type="Animation" id="Animation_mgmer"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Soup:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.11823499, 0, 0.056726933)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r4iri"]
_data = {
&"RESET": SubResource("Animation_mgmer"),
&"bob": SubResource("Animation_juujy")
}

[node name="HealthDrop" type="Node3D"]
script = ExtResource("1_juujy")

[node name="Soup" parent="." instance=ExtResource("1_hyvms")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.11823499, 0, 0.056726933)

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true
autostart = true

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15809083, 0.5362675, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.093933105, 0, -0.16259766)
shape = SubResource("BoxShape3D_juujy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r4iri")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
